--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@
 
 .info {
     flex-direction: column;
-    width: 50%;
+    width: 70%;
 }
 
 .image {
-    width: 50%;
+    width: 10%;
 }
 h2.title {
     font-size: 53px;
@@ -40,4 +40,7 @@ button.gb {
     font-weight: 700;
     border: none;
     border-radius: 18px;
+}
+.image img {
+    width: 100%;
 }
