--- a/style.css
+++ b/style.css
@@ -10,7 +10,23 @@
     width: 80%;
     margin: auto;
 }
+.logo {
+    width: 30%;
+}
 
+ul.list {
+    width: 70%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0;
+}
 .full {
     display: flex;
 }
@@ -102,5 +118,8 @@ p.com-right,
     background: #151616;
     border: 1px solid gray;
     border-radius: 29px;
+}
+ul.list li {
+    padding-right: 28px;
 }
 
