--- a/responsibe.css
+++ b/responsibe.css
@@ -2,7 +2,10 @@
     .container {
         width: 1024px !important;
     }
-
+    .media {
+    margin-right: 12px;
+    padding: 5px;
+    }
     .image {
         width: 35%;
     }
