--- a/responsibe.css
+++ b/responsibe.css
@@ -3,8 +3,8 @@
         width: 1024px !important;
     }
     .media {
-    margin-right: 12px !importent;
-    padding: 5px !important;
+    margin-right: 12px;
+    padding: 5px ;
     }
     .image {
         width: 35%;
