--- a/responsibe.css
+++ b/responsibe.css
@@ -43,7 +43,15 @@
     .container{
         width: 425px !important;
     }
+    .full {
+    flex-direction: column-reverse;
+    padding: 0;
+    }
 
+    .info {
+        text-align: left;
+        padding-left: 0;
+    }
     ul.list {
         display: none !important;
     }
